added conclusion with our hyperparams

--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -3,24 +3,26 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
+    "#### Removing Bad Participants from the Analysis.\n",
     "1. We are removing the first **n** trials for every cue in every casino. This ensures that the participants are able to learn the pattern of every slot as we want to measure how the RewP changes in different average task values. For that the participants have to learn first what the average task value is of every slot.\n",
     "2. We are removing participants that do not manage to get **threshold** of the learnable trials correct, i.e. choosing the lever with the higher win probability. Thus, we assume that participants did not truly care about the reward. As we want to measure the RewP in different averaging task values, this requires participants to truly want to win corresponding to dopamine release on a win."
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -63,6 +65,15 @@
     "    else:\n",
     "        print(f'Behavioral file for {subject_dir} does not exist.')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "After choosing n=4 and threshold=0.7, no participants went under the threshold. The authors noted that some were excluded, so we believe that these participants where from the other test site."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
