included print statements for clarity

--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -20,9 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-14T14:59:33.195999Z",
+     "start_time": "2023-12-14T14:59:32.510588600Z"
+    }
    },
    "outputs": [
     {
@@ -30,7 +34,19 @@
      "output_type": "stream",
      "text": [
       "Behavioral file for .git does not exist.\n",
-      "Behavioral file for code does not exist.\n"
+      "Behavioral file for code does not exist.\n",
+      "sub-27 does meet the threshold and should be included in the analysis.\n",
+      "sub-28 does meet the threshold and should be included in the analysis.\n",
+      "sub-29 does meet the threshold and should be included in the analysis.\n",
+      "sub-30 does meet the threshold and should be included in the analysis.\n",
+      "sub-31 does meet the threshold and should be included in the analysis.\n",
+      "sub-32 does meet the threshold and should be included in the analysis.\n",
+      "sub-33 does meet the threshold and should be included in the analysis.\n",
+      "sub-34 does meet the threshold and should be included in the analysis.\n",
+      "sub-35 does meet the threshold and should be included in the analysis.\n",
+      "sub-36 does meet the threshold and should be included in the analysis.\n",
+      "sub-37 does meet the threshold and should be included in the analysis.\n",
+      "sub-38 does meet the threshold and should be included in the analysis.\n"
      ]
     }
    ],
@@ -59,8 +75,10 @@
     "        success_rate = correct_choices.mean()\n",
     "        threshold_met = success_rate >= threshold\n",
     "        if threshold_met:\n",
+    "            print(f\"{subject_dir} does meet the threshold and should be included in the analysis.\")\n",
     "            filtered_df.to_csv(os.path.join(subjects_dir, subject_dir, 'beh', f'{subject_dir}_task-casinos_beh_filtered.tsv'), sep='\\t', index=False)\n",
     "        else:\n",
+    "            print(f\"{subject_dir} does  not meet the threshold and should be not included in the analysis.\")\n",
     "            filtered_df.to_csv(os.path.join(subjects_dir, subject_dir, 'beh', f'{subject_dir}_REJECT_task-casinos_beh_filtered.tsv'), sep='\\t', index=False)\n",
     "    else:\n",
     "        print(f'Behavioral file for {subject_dir} does not exist.')"
