--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -57,7 +57,7 @@
     "n = 4\n",
     "threshold = 0.7\n",
     "\n",
-    "subjects_dir = 'Dataset/ds004147-filtered'\n",
+    "subjects_dir = 'Dataset/ds004147-filtered'  # copy dataset an add \"-filtered\" suffix\n",
     "subject_dirs = [d for d in os.listdir(subjects_dir) if os.path.isdir(os.path.join(subjects_dir, d))]\n",
     "removed_trial_dict = {}\n",
     "for subject_dir in subject_dirs:\n",
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "source": [
     "### Filter the first n=4 trials for every slot in every casino for every participant\n",
-    "During the removal of bad participants, we also returned a filtered beh.tsv without the first n=4 trials. We do this for the eeg.vmrk and events.tsv files, respectively.\n"
+    "During the removal of bad participants, we also returned a filtered beh.tsv without the first n=4 trials. We do this for the eeg.vmrk and events.tsv files, respectively. Moreover, invalid trials are also removed, as the data is unnecessary.\n"
    ],
    "metadata": {
     "collapsed": false
