--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-24T12:58:16.717391900Z",
-     "start_time": "2023-12-24T12:58:16.438968500Z"
+     "end_time": "2024-02-02T14:43:47.264986200Z",
+     "start_time": "2024-02-02T14:43:47.081068500Z"
     }
    },
    "outputs": [
@@ -109,25 +109,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "eeg.vmrk file for code does not exist.\n",
-      "Creating filtered .vmrk and events.tsv file for sub-27\n",
-      "Creating filtered .vmrk and events.tsv file for sub-28\n",
-      "Creating filtered .vmrk and events.tsv file for sub-29\n",
-      "Creating filtered .vmrk and events.tsv file for sub-30\n",
-      "Creating filtered .vmrk and events.tsv file for sub-31\n",
-      "Creating filtered .vmrk and events.tsv file for sub-32\n",
-      "Creating filtered .vmrk and events.tsv file for sub-33\n",
-      "Creating filtered .vmrk and events.tsv file for sub-34\n",
-      "Creating filtered .vmrk and events.tsv file for sub-35\n",
-      "Creating filtered .vmrk and events.tsv file for sub-36\n",
-      "Creating filtered .vmrk and events.tsv file for sub-37\n",
-      "Creating filtered .vmrk and events.tsv file for sub-38\n"
+      "Subject: sub-27 had 5 invalid trials!\n",
+      "Subject: sub-28 had 2 invalid trials!\n",
+      "Subject: sub-29 had 91 invalid trials!\n",
+      "Subject: sub-30 had 19 invalid trials!\n",
+      "Subject: sub-31 had 7 invalid trials!\n",
+      "Subject: sub-32 had 59 invalid trials!\n",
+      "Subject: sub-33 had 25 invalid trials!\n",
+      "Subject: sub-34 had 16 invalid trials!\n",
+      "Subject: sub-35 had 12 invalid trials!\n",
+      "Subject: sub-36 had 29 invalid trials!\n",
+      "Subject: sub-37 had 16 invalid trials!\n",
+      "Subject: sub-38 had 7 invalid trials!\n"
      ]
     }
    ],
@@ -158,6 +158,7 @@
     "            groups.append(current_group)\n",
     "        groups = [(idx+1, element) for idx, element in enumerate(groups)]\n",
     "        invalid = [(idx, element) for idx, element in groups if len(element) != 5]  # filter invalid trials, i.e. sublist != 5\n",
+    "        print(f\"Subject: {subject_dir} had {len(invalid)} invalid trials!\")\n",
     "        # filter the 4 trials for every slot in every casino\n",
     "        first_four = [(idx, item) for idx, item in groups if idx in removed_trial_dict[subject_dir][\"trial\"].values]\n",
     "        first_four_invalid= [item for item in first_four if len(item[1]) != 5]\n",
@@ -171,7 +172,7 @@
     "        filtered_lines = [line for idx, line in enumerate(lines) if idx not in lines_to_remove]\n",
     "        \n",
     "        # create filtered vrmk file\n",
-    "        print(f\"Adapting eeg.vmrk and events.tsv file for {subject_dir}\")\n",
+    "        #print(f\"Adapting eeg.vmrk and events.tsv file for {subject_dir}\")\n",
     "        with open(os.path.join(subjects_dir, subject_dir, 'eeg', f'{subject_dir}_task-casinos_eeg.vmrk'), \"w\") as file:\n",
     "            # Write each item to the file\n",
     "            for item in filtered_lines:\n",
@@ -193,8 +194,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-24T12:58:19.982277500Z",
-     "start_time": "2023-12-24T12:58:19.370320600Z"
+     "end_time": "2024-02-02T14:43:47.662136Z",
+     "start_time": "2024-02-02T14:43:47.266992Z"
     }
    }
   },
