copy dataset for filtering instead of inplace filtering

--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-02T14:43:47.264986200Z",
-     "start_time": "2024-02-02T14:43:47.081068500Z"
+     "end_time": "2024-02-02T15:33:10.108180400Z",
+     "start_time": "2024-02-02T15:32:57.751734400Z"
     }
    },
    "outputs": [
@@ -33,6 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Behavioral file for -filtered does not exist.\n",
       "Behavioral file for code does not exist.\n",
       "sub-27 does meet the threshold and should be included in the analysis.\n",
       "sub-28 does meet the threshold and should be included in the analysis.\n",
@@ -52,12 +53,16 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "from utils import copyanything\n",
     "\n",
     "# HYPERPARAMS\n",
     "n = 4\n",
     "threshold = 0.7\n",
     "\n",
-    "subjects_dir = 'Dataset/ds004147-filtered'  # copy dataset an add \"-filtered\" suffix\n",
+    "\n",
+    "subjects_dir = 'Dataset/ds004147'  # copy dataset an add \"-filtered\" suffix\n",
+    "copyanything(subjects_dir, f\"{subjects_dir}-filtered\")\n",
+    "subjects_dir = f\"{subjects_dir}-filtered\"\n",
     "subject_dirs = [d for d in os.listdir(subjects_dir) if os.path.isdir(os.path.join(subjects_dir, d))]\n",
     "removed_trial_dict = {}\n",
     "for subject_dir in subject_dirs:\n",
@@ -109,12 +114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "eeg.vmrk file for -filtered does not exist.\n",
       "eeg.vmrk file for code does not exist.\n",
       "Subject: sub-27 had 5 invalid trials!\n",
       "Subject: sub-28 had 2 invalid trials!\n",
@@ -194,8 +200,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-02T14:43:47.662136Z",
-     "start_time": "2024-02-02T14:43:47.266992Z"
+     "end_time": "2024-02-02T15:33:10.653096800Z",
+     "start_time": "2024-02-02T15:33:10.104028700Z"
     }
    }
   },
