work in progress

--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-02T15:33:10.108180400Z",
-     "start_time": "2024-02-02T15:32:57.751734400Z"
+     "end_time": "2024-02-02T15:36:17.519440300Z",
+     "start_time": "2024-02-02T15:36:11.840601400Z"
     }
    },
    "outputs": [
@@ -33,7 +33,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Behavioral file for -filtered does not exist.\n",
       "Behavioral file for code does not exist.\n",
       "sub-27 does meet the threshold and should be included in the analysis.\n",
       "sub-28 does meet the threshold and should be included in the analysis.\n",
@@ -60,16 +59,15 @@
     "threshold = 0.7\n",
     "\n",
     "\n",
-    "subjects_dir = 'Dataset/ds004147'  # copy dataset an add \"-filtered\" suffix\n",
+    "subjects_dir = 'Dataset/ds004147'\n",
     "copyanything(subjects_dir, f\"{subjects_dir}-filtered\")\n",
-    "subjects_dir = f\"{subjects_dir}-filtered\"\n",
+    "subject_dir = f\"{subjects_dir}-filtered\"\n",
     "subject_dirs = [d for d in os.listdir(subjects_dir) if os.path.isdir(os.path.join(subjects_dir, d))]\n",
     "removed_trial_dict = {}\n",
     "for subject_dir in subject_dirs:\n",
-    "    beh_file_path = os.path.join(subjects_dir, subject_dir, 'beh', f'{subject_dir}_task-casinos_beh.tsv')\n",
-    "\n",
-    "    if os.path.exists(beh_file_path):\n",
-    "        df = pd.read_csv(beh_file_path, sep='\\t')\n",
+    "    beh_file_path_tsv = os.path.join(subjects_dir, subject_dir, 'beh', f'{subject_dir}_task-casinos_beh.tsv')\n",
+    "    if os.path.exists(beh_file_path_tsv):\n",
+    "        df = pd.read_csv(beh_file_path_tsv, sep='\\t')\n",
     "        # remove the first four trials for every cue and block\n",
     "        filtered_df = df.groupby(['block', 'cue']).apply(lambda x: x.iloc[4:]).reset_index(drop=True)\n",
     "        filtered_df = filtered_df[filtered_df['invalid'] != 1]\n",
@@ -89,7 +87,7 @@
     "            print(f\"{subject_dir} does  not meet the threshold and should be not included in the analysis.\")\n",
     "            df_sorted.to_csv(os.path.join(subjects_dir, subject_dir, 'beh', f'{subject_dir}_REJECT_task-casinos_beh.tsv'), sep='\\t', index=False)\n",
     "    else:\n",
-    "        print(f'Behavioral file for {subject_dir} does not exist.')"
+    "        print(f'Behavioral directory for {subject_dir} does not exist.')"
    ]
   },
   {
@@ -114,26 +112,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eeg.vmrk file for -filtered does not exist.\n",
       "eeg.vmrk file for code does not exist.\n",
-      "Subject: sub-27 had 5 invalid trials!\n",
-      "Subject: sub-28 had 2 invalid trials!\n",
-      "Subject: sub-29 had 91 invalid trials!\n",
-      "Subject: sub-30 had 19 invalid trials!\n",
-      "Subject: sub-31 had 7 invalid trials!\n",
-      "Subject: sub-32 had 59 invalid trials!\n",
-      "Subject: sub-33 had 25 invalid trials!\n",
-      "Subject: sub-34 had 16 invalid trials!\n",
-      "Subject: sub-35 had 12 invalid trials!\n",
-      "Subject: sub-36 had 29 invalid trials!\n",
-      "Subject: sub-37 had 16 invalid trials!\n",
-      "Subject: sub-38 had 7 invalid trials!\n"
+      "Subject: sub-27 had 0 invalid trials!\n",
+      "Subject: sub-28 had 0 invalid trials!\n",
+      "Subject: sub-29 had 0 invalid trials!\n",
+      "Subject: sub-30 had 0 invalid trials!\n",
+      "Subject: sub-31 had 0 invalid trials!\n",
+      "Subject: sub-32 had 0 invalid trials!\n",
+      "Subject: sub-33 had 0 invalid trials!\n",
+      "Subject: sub-34 had 0 invalid trials!\n",
+      "Subject: sub-35 had 0 invalid trials!\n",
+      "Subject: sub-36 had 0 invalid trials!\n",
+      "Subject: sub-37 had 0 invalid trials!\n",
+      "Subject: sub-38 had 0 invalid trials!\n"
      ]
     }
    ],
@@ -148,6 +145,7 @@
     "for subject_dir in subject_dirs:\n",
     "    eeg_vmrk_path = os.path.join(subjects_dir, subject_dir, 'eeg', f'{subject_dir}_task-casinos_eeg.vmrk')\n",
     "    eee_events_tsv_path = os.path.join(subjects_dir, subject_dir, 'eeg', f'{subject_dir}_task-casinos_events.tsv')\n",
+    "    eeg_events_json_path = os.path.join(subjects_dir, subject_dir, 'eeg', f'{subject_dir}_task-casinos_events.json')\n",
     "    if os.path.exists(eeg_vmrk_path):\n",
     "        with open(eeg_vmrk_path, 'r') as file:\n",
     "            lines = file.readlines()\n",
@@ -200,8 +198,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-02T15:33:10.653096800Z",
-     "start_time": "2024-02-02T15:33:10.104028700Z"
+     "end_time": "2024-02-02T15:36:17.742060100Z",
+     "start_time": "2024-02-02T15:36:17.526923200Z"
     }
    }
   },
