doc - reref & downsampling

--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -222,6 +222,26 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Re-Referencing:\n",
+    "\n",
+    "The authors re-referenced to the average of the mastoid signals, using the \"TP9\" and \"TP10\" channels. \n",
+    "Since this is a common rereferencing scheme, we have used the same, by setting the relevant parameter in the config file as follows:\n",
+    "```eeg_reference = ['TP9', 'TP10'] ``` ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Downsampling:\n",
+    "\n",
+    "To save on processing power required, we have downsampled the data from 1000 Hz to 150 Hz. mne-bids-pipeline constructs the PSD plot for frequencies up to 1.5 * lowpass_cutoff_frequency. Thus 150 Hz is sufficient to allow us to include all required frequencies in our analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
    "metadata": {
     "collapsed": false
