report - paper intro + pipeline notes

--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -2,30 +2,79 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
-    "### Removing Bad Participants from the Analysis.\n",
-    "1. We are removing the first **n** trials for every cue in every casino. This ensures that the participants are able to learn the pattern of every slot as we want to measure how the RewP changes in different average task values. For that the participants have to learn first what the average task value is of every slot.\n",
-    "2. We are removing participants that do not manage to get **threshold** of the learnable trials correct, i.e. choosing the lever with the higher win probability. Thus, we assume that participants did not truly care about the reward. As we want to measure the RewP in different averaging task values, this requires participants to truly want to win corresponding to dopamine release on a win."
+    "### \"Task-level Value Affects Trial-level Reward Processing\" - the original paper in brief\n",
+    "\n",
+    "#### Experiment: \n",
+    "- Participants were presented with **slot machines** (\"trials\") where they had to select one of two arms to pull. If the participant selected the correct arm on the slot machine, they would **\"win\"** at the machine and gain \\\\$0.03, while if they selected the wrong arm, they would **\"lose\"** the trial i.e. gain \\\\$0.00.\n",
+    "- The **win/loss feedback** for each slot machine was shown to them after they selected an arm. Their goal was to **win as much money as possible**.\n",
+    "- Each slot machine was preceded by a **cue** (coloured shape) shown to the participant. The slot machines were divided into three sets or **casinos** (\"tasks\").\n",
+    "- The different cues corresponded to **different types of slot machines**. Some machines, called **\"low-value\" machines**, had a 50% win probablility on both arms, while others called **\"high-value machines\"** had an 80% win probability on one arm and 20% on the other.\n",
+    "- For high-value machines, if the participant selected the 80%-arm it was considered a **\"correct\"** response. There was no \"correct\" response for a low-value machine.\n",
+    "- The **participants were not informed** of these differences. The **win amount was kept constant** across all slot machines.\n",
+    "- The **three casinos had a mix of high- and low- value machines** - one each of \"high-value\" and \"low-value\" task/casino containing only high-/low- value slot machines respectively, and a \"mid-value\" task containing equal numbers of both.\n",
+    "- Each of the 6 machine types was presented 24 times in random order (144 trials per task).\n",
+    "\n",
+    "#### Research question: \n",
+    "How does task-level reward processing affect trial-level value processing in ACC?\n",
+    "\n",
+    "#### Data Preprocessing:\n",
+    "- Excluding participants who did not learn the cues - in order to be included, a participant should have **correct** responses for **at least 60% of the trials** in the mid and high value tasks.\n",
+    "- For each task, the first ten trials for each cue type were excluded, since it was assumed that the participants would still be learning the cues.\n",
+    "\n",
+    "#### Analysis:\n",
+    "- The researchers looked into \"Reward Positivity\" (RewP), which corresponds to how much outcomes differ from learned action values \\[1].\n",
+    "- They created the feedback-locked ERP (mean across epochs) for different task-cue-participant combinations. Then, they constructed difference waves between the mean win ERP and mean loss ERP across all participants for the task-cue combination.\n",
+    "- They examined the data from the FCz electrode between 240–340 ms post feedback, based on the recommendations from previous research on reward prediction. The RewP was defined as the maximum voltage within this window for each task-cue-participant.\n",
+    "- Analysis was carried out in MATLAB 2022a using the EEGLab library.\n",
+    "\n",
+    "\n",
+    "### Some notes on the dataset\n",
+    "- Although the paper says the data was sampled at 250 Hz, according to the dataset the sampling rate is 1000 Hz and we have proceeded assuming this 1kHz value.\n",
+    "- The paper states that the 10-20 electrode montage was used.\n",
+    "- Due to participants' wishes, only part of the data was shared by the researchers - that collected at the Oxford testing site. This means that we have fewer subjects to analyse, and also that the notch filtering required will be only at one frequency (50 Hz at Oxford).\n",
+    "- Each subject's 'eeg' subfolder contains a 'sub-XX_task-casinos_events.json' containing names and descriptions of the events like onset of fixation cross, cue onset, response, and feedback. This list is not complete, namely some events like S12, S22, S32 for the cue onsets are missing. However, the events are present in the data and can be used directly for data processing. "
    ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "jp-MarkdownHeadingCollapsed": true,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "source": [
+    "### Removing Participants and Trials from the Analysis.\n",
+    "\n",
+    "Before passing the data to the automated pipeline, we exclude some trials and participants according to the rules below: \n",
+    "1. We are removing the first **n** trials for every cue in every casino. This ensures that the participants are able to learn the pattern of every slot as we want to measure how the RewP changes in different average task values. For that the participants have to learn first how the cues of every slot machine correspond to the reward. Here, we decided to reduce the number of trials excluded per machine type (cue) to 4 trials, since we have less data to work with overall.\n",
+    "2. We are removing participants that do not manage to get **threshold** of the learnable trials correct, i.e. choosing the lever with the higher win probability. Thus, we assume that participants did not truly care about the reward or did not manage to learn the cues. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-02-02T14:43:47.264986200Z",
      "start_time": "2024-02-02T14:43:47.081068500Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [
@@ -89,27 +138,44 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "\n",
     "After choosing n=4 and threshold=0.7, no participants went under the threshold. The authors noted that some were excluded, so we believe that these participants where from the other test site."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "source": [
     "### Filter the first n=4 trials for every slot in every casino for every participant\n",
+    "\n",
     "During the removal of bad participants, we also returned a filtered beh.tsv without the first n=4 trials. We do this for the eeg.vmrk and events.tsv files, respectively. Moreover, invalid trials are also removed, as the data is unnecessary.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-02T14:43:47.662136Z",
+     "start_time": "2024-02-02T14:43:47.266992Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -190,62 +256,79 @@
     "                file.write(item)\n",
     "    else:\n",
     "        print(f'eeg.vmrk file for {subject_dir} does not exist.')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-02-02T14:43:47.662136Z",
-     "start_time": "2024-02-02T14:43:47.266992Z"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Cue-related Stimuli choice\n",
-    "Now we are loading the dataset and first analyze the different cue stimuli (e.g. high-task and low-cue, medium-task and high-cue etc.). Usually, we would have to take the stimuli which is responsible for the onset of the cue, but due to missing cue and task combinations in the sub-X_task-casinos_events.json, we instead take the stimuli which corresponds to the beep, i.e. S3, S13, S23 and S33. "
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "<img alt=\"image\" src=\"Paper/trial_pipeline.jpg\" width=\"1500\"/>\n",
-    "\n",
-    "To make our workaround of using beep stimuli work, we will set the Epoch range to -1200ms and -600ms, which matches with the range the authors have used. As can be seen from the trial pipeline (the step after the fixation cross equates to the cue onset), setting the time range like this would correspond to -200ms and 600ms for the cue onset stimulus."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Note: \n",
+    "\n",
+    "We can draw a graph for the number of invalid trials by subject. Subject 29 had nearly 25% of the trials incorrect, however we have included the subject in the analysis as of now."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pipeline Configuration - thought process\n",
+    "\n",
+    "#### Downsampling:\n",
+    "\n",
+    "To save on processing power required, we have downsampled the data from 1000 Hz to 150 Hz. ```mne-bids-pipeline``` constructs the PSD plot for frequencies up to 1.5 * lowpass_cutoff_frequency. Thus 150 Hz is sufficient to allow us to include all required frequencies in our analysis.\n",
+    "\n",
+    "#### Filtering:\n",
+    "\n",
+    "- We have used a band-pass filter (0.1 - 50Hz) since frequencies of interest for EEG analysis would lie within this band.\n",
+    "- A notch filter at 50Hz is applied (power line frequency at the Oxford site).\n",
+    "- If the data from the other site had also been available, we could have run the filtering step twice with the respective notch frequencies on the two groups of subjects by specifying the subject IDs in the configuration file. Then we could proceed with the next steps running on all subjects, since mne-bids-pipeline caches the intermediate results of processing steps.\n",
+    "\n",
     "#### Re-Referencing:\n",
     "\n",
     "The authors re-referenced to the average of the mastoid signals, using the \"TP9\" and \"TP10\" channels. \n",
     "Since this is a common rereferencing scheme, we have used the same, by setting the relevant parameter in the config file as follows:\n",
-    "```eeg_reference = ['TP9', 'TP10'] ``` ."
+    "```eeg_reference = ['TP9', 'TP10']``` .\n",
+    "\n",
+    "#### Epochs\n",
+    "\n",
+    "For the initial analysis, we selected the events related to win/loss feedback, i.e. S6, S16, S26, S36, S7, S17, S27, S37. These can be specified in the 'conditions' parameter of the configuration file. Later on, the pipeline can be run for a different set of events by changing the 'conditions' parameter, e.g. we can analyse cue-locked waveforms rather than feedback-locked as we have done here.\n",
+    "\n",
+    "Following the paper, we have also selected epochs of -200ms to +600ms from the feedback event.\n",
+    "Note: In a previous version of the pipeline we were using (1.5), epoching was done before ICA, whereas in the latest version v1.7, the epoching step is run after the ICA steps.\n",
+    "\n",
+    "#### ICA for artefact removal:\n",
+    "\n",
+    "The automated pipeline uses the same epochs for ICA training as well as for ERP analysis. For simplicity we have left it as it is, however we note that the authors of the paper used different epochs for ICA (0-3 seconds starting at cue event) and for experiment \u0000t\u0000)\u0000 \u0000s (-0.2 to +06. seconds from feedback events). \n",
+    "\n",
+    "#### Peak-to-Peak based rejection\n",
+    "\n",
+    "In the paper, the authors rejected an epoch from analysis if it had more than 150 microvolts of overall change across the epoch.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "#### Downsampling:\n",
-    "\n",
-    "To save on processing power required, we have downsampled the data from 1000 Hz to 150 Hz. mne-bids-pipeline constructs the PSD plot for frequencies up to 1.5 * lowpass_cutoff_frequency. Thus 150 Hz is sufficient to allow us to include all required frequencies in our analysis."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "source": [],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "source": [
+    "#### Setup\n",
+    "\n",
+    "We used the latest version of mne-bids-pipeline (1.7.0), running on Windows and on Ubuntu Linux. The environment can be replicated using the environment file available in the git of this project. \n",
+    "\n",
+    "#### References\n",
+    "\n",
+    "Paper: https://doi.org/10.1016/j.neuroimage.2022.119456.\n",
+    "BIDS data format: doi:10.1038/sdata.2016.44\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -264,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
