add code snippets (ptp anno, evoked) + update report

--- a/dataset_preprocessing.ipynb
+++ b/dataset_preprocessing.ipynb
@@ -34,14 +34,14 @@
     "- Although the paper says the data was sampled at 250 Hz, according to the dataset the sampling rate is 1000 Hz and we have proceeded assuming this 1kHz value.\n",
     "- The paper states that the 10-20 electrode montage was used.\n",
     "- Due to participants' wishes, only part of the data was shared by the researchers - that collected at the Oxford testing site. This means that we have fewer subjects to analyse, and also that the notch filtering required will be only at one frequency (50 Hz at Oxford).\n",
-    "- Each subject's 'eeg' subfolder contains a 'sub-XX_task-casinos_events.json' containing names and descriptions of the events like onset of fixation cross, cue onset, response, and feedback. This list is not complete, namely some events like S12, S22, S32 for the cue onsets are missing. However, the events are present in the data and can be used directly for data processing. "
+    "- Each subject's 'eeg' subfolder contains a 'sub-XX_task-casinos_events.json' containing names and descriptions of the events like onset of fixation cross, cue onset, response, and feedback. This list is not complete, namely some events like S12, S22, S32 for the cue onsets are missing. However, the events are present in the data and can be used directly for data processing.\n",
+    "- Event name format: Each event name consists of four characters, with spaces used for padding (e.g. ```S  6, S 16```). However in some forms of output (e.g. in jupyter notebooks that we used while initially exploring the data) it can show up as three characters (```S 6, S 16```) and in the json file mentioned above the names are also slightly different (```S6, S16```). "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
-    "jp-MarkdownHeadingCollapsed": true,
     "jupyter": {
      "outputs_hidden": false
     }
@@ -294,11 +294,10 @@
     "For the initial analysis, we selected the events related to win/loss feedback, i.e. S6, S16, S26, S36, S7, S17, S27, S37. These can be specified in the 'conditions' parameter of the configuration file. Later on, the pipeline can be run for a different set of events by changing the 'conditions' parameter, e.g. we can analyse cue-locked waveforms rather than feedback-locked as we have done here.\n",
     "\n",
     "Following the paper, we have also selected epochs of -200ms to +600ms from the feedback event.\n",
-    "Note: In a previous version of the pipeline we were using (1.5), epoching was done before ICA, whereas in the latest version v1.7, the epoching step is run after the ICA steps.\n",
     "\n",
     "#### ICA for artefact removal:\n",
     "\n",
-    "The automated pipeline uses the same epochs for ICA training as well as for ERP analysis. For simplicity we have left it as it is, however we note that the authors of the paper used different epochs for ICA (0-3 seconds starting at cue event) and for experiment \u0000t\u0000)\u0000 \u0000s (-0.2 to +06. seconds from feedback events). \n",
+    "The authors of the paper used different epochs for ICA (0-3 seconds starting at cue event) and for ERP\u0000 analysis (-0.2 to +06. second epochs locked to feedback events).  In a previous version of the pipeline we were using (1.5), epoching was done before ICA, whereas in the latest version v1.7, the epoching step can be run after the ICA steps. For our pipeline, we have a variable ```ica_train_step``` which should be set to True when performing the ICA and False after the ICA training is done. This will cause the relevant settings like event names (\"conditions\") and epoch length to be set accordingly.\n",
     "\n",
     "#### Peak-to-Peak based rejection\n",
     "\n",
